# diffusers-tuner

./: .gitignore  LICENSE  README.md  TODO.md  data_module.py  encode_prompt.py  inference.py  main.py  pyproject.toml  requirements.txt  tune.py  tuner.py
adapters/: lora.py  utils.py
configs/: encode_prompt.yaml  infer.yaml  main.yaml  test.yaml  tune.yaml
configs/adapter/: lora.yaml
configs/data/: data_module.yaml
configs/dataset/: coco.yaml  data_module.yaml  dummy.yaml  eval_set.yaml  tune_dataset.yaml  tune_dataset2.yaml
configs/loss/: flow_matching.yaml
configs/pipeline/: flux_fill.yaml  qwenimage_edit_plus.yaml
configs/pipelines/: qwenimage_edit_plus.yaml
data/: __init__.py  collate_fns.py  data_module.py  data_utils.py  key_processors.py  post_processors.py  style_transfer_dataset.py  tune_dataset.py
data/dummy/: collate_fns.py
dataset/: bucket_demo.json  demo.json
diffusers_tuner/: tune_utils.py  tuner.py
inference/attention_processors/: attn_utils.py
pipelines/: pipeline_flux_fill.py  pipeline_qwenimage_edit_plus.py  pipeline_seedvr2.py  pipeline_utils.py
scripts/encode_prompt/: encode_prompt_qwenimage_edit_2511.sh
scripts/tune/: fsdp_qwenimage_edit_2511.sh  tune_qwenimage_edit_2511.sh
