[project]
name = "diffusers-tuner"
version = "0.1.0"
description = "A fine-tuner for diffusers."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "diffusers>=0.37.0",
    "hydra-core>=1.3.2",
    "loguru>=0.7.3",
    "prodigyopt>=1.1.2",
    "safetensors>=0.7.0",
    "tensorboard>=2.20.0",
    "torch==2.7.1",
    "torchvision>=0.20.0",
    "transformers>=5.3.0",
]
